# Pansoma

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
configs/: graph_resources.yaml  hg008_illumina_5ch_indel.yaml  hg008_illumina_5ch_snp.yaml
cpp/: fast_writer.cpp
cpp/legacy/CPP_NPU_format/CPP_Gemini/: CMakeLists.txt
cpp/legacy/CPP_NPU_format/CPP_Gemini/proto/: vg.pb.cc  vg.pb.h
cpp/legacy/CPP_NPU_format/CPP_Gemini/python_utility/: convert_pkl_tsv.py
cpp/legacy/CPP_NPU_format/CPP_Gemini/src/: file_format.hpp  main.cpp  pipeline.cpp
cpp/legacy/CPP_NPU_format/CPP_ver2_chatGPT/: CMakeLists.txt  npu_writer.cpp
cpp/legacy/root_cpp/: parse_gam.cpp
docker/: Dockerfile.ml
docs/: data_formats.md  legacy_mapping.md  pipeline.md
experiments/legacy/processing/: parseGAM.py  parseGAM_filtered_unperfect_nodes.py  parseGAM_filtered_unperfect_nodes_SQL_Ver3.py  parseGAM_filtered_unperfect_nodes_Ver2.py  parseGAM_filtered_unperfect_nodes_Ver4.py  parseGAM_filtered_unperfect_nodes_Ver4_LongRead.py  parseGAM_filtered_unperfect_nodes_Ver4_LongRead2.py  parseGAM_filtered_unperfect_nodes_Ver5_LongRead_parallel.py  parseGAM_filtered_unperfect_nodes_Ver5_parallel.py  parseGAM_filtered_unperfect_nodes_Ver6.py  parseGAM_filtered_unperfect_nodes_Ver6C.py  parseGAM_filtered_unperfect_nodes_Ver6CPP.py  parseGAM_filtered_unperfect_nodes_Ver6_parallel.py  parseGAM_filtered_unperfect_nodes_Ver6_pp.py  parseGAM_find_potential_reads.py  parseGAM_find_potential_reads_tmpTSV.py  parseGAM_find_reads_by_nodeID.py  parseGAM_find_unperfect_nodes.py  parseGAM_find_unperfect_nodes_Multiple_GAM_V6.py  parseGAM_find_unperfect_nodes_V6.py  potential_variant_pileup_generation.py  potential_variant_pileup_generation_Ver2.py  setup.py
machine_learning/pansoma_net/: Dockerfile  README.md  environment.yml  mynet.py  pack_to_shards_pure_labels.py  pansoma_net.py  requirements.txt
machine_learning/pansoma_net/scripts/: align_INDEL_VCF.py  dataset.py  dataset_npy.py  (+29 more)
scripts/: build_chr_node_filters.sh  build_dat_idx.py  build_fast_writer.sh  build_grch38_path_json.py  find_unperfect_nodes.py  label_tensors.py  run_giraffe.sh  visualize_tensor.py
scripts/slurm/: infer_pansoma_net.sh  train_pansoma_net.sh
(+86 files in other folders)
